--- a/config/tidbit.conf
+++ b/config/tidbit.conf
@@ -2,8 +2,8 @@
 # SPDX-License-Identifier: MIT
 
 # Enable Encoders
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+#CONFIG_EC11=y
+#CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment to enable underglow
 #CONFIG_ZMK_RGB_UNDERGLOW=y
